# mirp

./: .gitignore  LICENSE  README.md  buildozer.spec  intent-filter.xml  pyproject.toml
docs/: developer_guide.md
src/mirp/: main.py  mirp.kv
src/mirp/mserial/: errors.py  serial.py
src/mirp/ui/: demo.py  mainlayout.kv  widgets.py
tests/: test1.py  test2.py
